🪛 拼音类微调
说文已经得了一种看到工具类不管理状态就想重构的病

1️⃣ 绝对不是我想要对齐
真正的原因是原来「拼音」和「不带音调的部分」区分不明确，但是现在要区分的地方越来越多，增加一个简写
Syllable->Syll

🖇️ Pinyin
🖇️ NamPinyin
🖇️ UniPinyin

2️⃣ 「不能放你出去做核酸」
🪛 Dialect
🪛 PinyinChecker
1. 这是一个悖论，检查是否无效要通过构造一下看看。看到有效之后就选择构造结果，请问分两批的意义在哪里？
2. 所以删除了检查的部分，加上了一个看上去一样（实际上也差不多）的构造的函数
3. 无效拼音异常可以返回前端，并且不会触发打印栈

3️⃣ 你现在可以拼音通用载体，别丢份啊

✏️ SPinyin
1. 额外加一个规则，拼音里不能有空格，这是一个红线
2. 本来是在做富文本的时候做的，虽然这个类没什么额外的信息，但是不能有空格还是可以确定的
3. 「难说」

🐛 RPinyin
1. 在习惯了@Data解决一切问题的时候，现在对只读类还缺少加@EqualsAndHashCode和final的习惯

4️⃣ 前摇过长

✏️ HanPinyin
1. 从工具类编程内容
2. split和read并存是没有别的风格（也有，比如大小写yu什么的，不可变罢了）

✏️ Zhuyin
主要是构造的方式改变了一下

🖇️ MdrTool

🖇️ TestTransferPinyinAndZhuyin
不是字符串的比较了，EqualChecker<??>看了我大半天